--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <meta name = "author" content = "Nicolás Pauer" />
       <meta name = "keyword" content = "Martin Fierro, ganar" />
       <title>Gana un Martin Fierro</title>
+      <link rel = "stylesheet" href = "gala.css" />
     </head>
     <body>
       <h1>PROXIMAMENTE...</h1>
