--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
       <link rel = "stylesheet" href = "gala.css" />
     </head>
     <body>
-      <h1>PROXIMAMENTE...</h1>
+      <!-- Describo que hace el formulario -->
+      <h1>Ganate un Martín Fierro: </h1><br />
+     <!-- Formulario con nombre del ternado, la terna que ganó y
+          en que año a partir del 2024 lo hizo. -->
+      <form id = "ganador">
+        <input id = "ternado" type = "text" placeholder = "ternado" />
+        <input id = "terna" type = "text" placeholder = "terna" />
+        <input id = "edicion" type = "number" min = "2024" placeholder = "año" />
+        <button id = "entrega">Entregar</button>
+      </form>
+     <!-- Notificaion del copyright -->
+     <footer>© 2023 Nicolas Pauer</footer>
     </body>
   </html>
