--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <input id = "terna" type = "text" placeholder = "terna" />
         <input id = "edicion" type = "number" min = "2024" placeholder = "año" />
         <button id = "entrega">Entregar</button>
-      </form>
+      </form><br />
      <!-- Notificaion del copyright -->
      <footer>© 2023 Nicolas Pauer</footer>
     </body>
