--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       </form><br />
       <script type = "text/javascript" src = "main.js"></script>
      <!-- Notificaion del copyright -->
-     <footer>© 2023-2024 Nicolas Pauer</footer>
+     <footer>© 2023 - 2024 Nicolas Pauer</footer>
     </body>
   </html>
