--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Ganate un Martín Fierro: </h1><br />
      <!-- Formulario con nombre del ternado, la terna que ganó y
           en que año a partir del 2024 lo hizo. -->
-      <form id = "ganador">
+      <form id = "ganador" action = "ganado" method = "post">
         <input id = "ternado" type = "text" placeholder = "ternado" />
         <input id = "terna" type = "text" placeholder = "terna" />
         <input id = "edicion" type = "number" min = "2024" placeholder = "año" />
@@ -21,6 +21,6 @@
       </form><br />
       <script type = "text/javascript" src = "main.js"></script>
      <!-- Notificaion del copyright -->
-     <footer>© 2023 - 2024 Nicolas Pauer</footer>
+     <footer>© 2023 - 2024 <a href = "https://nicopauer.github.io/info/">Nicolas Pauer</a></footer>
     </body>
   </html>
