Actualizar index.html
correcion en acción del form para que no de error 405 por problemas de permisos.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Ganate un Martín Fierro: </h1><br />
      <!-- Formulario con nombre del ternado, la terna que ganó y
           en que año a partir del 2024 lo hizo. -->
-      <form id = "ganador" action = "ganado" method = "post">
+      <form id = "ganador" method = "post">
         <input id = "ternado" type = "text" placeholder = "ternado" />
         <input id = "terna" type = "text" placeholder = "terna" />
         <input id = "edicion" type = "number" min = "2024" placeholder = "año" />
