Actualizar index.html
cambio canvas por div hasta que sepa cómo se usa canvas.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input id = "edicion" type = "number" min = "2024" placeholder = "año" />
         <button id = "entrega">Entregar</button>
       </form><br />
-      <canvas id = "martin-fierro" width = "300px" height = "150px"></canvas>
+      <div id = "martin-fierro" width = "300px" height = "150px"></div>
       <script type = "text/javascript" src = "main.js"></script>
      <!-- Notificaion del copyright -->
      <footer>© 2023 - 2024 <a href = "https://nicopauer.github.io/info/">Nicolas Pauer</a></footer>
