--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <meta name = "keyword" content = "Martin Fierro, ganar" />
       <title>Gana un Martin Fierro</title>
       <link rel = "stylesheet" href = "gala.css" />
+      <link rel = "icon" href = "martin-fierro.png" />
     </head>
     <body>
       <!-- Describo que hace el formulario -->
@@ -19,7 +20,7 @@
         <input id = "edicion" type = "number" min = "2024" placeholder = "año" />
         <button id = "entrega">Entregar</button>
       </form><br />
-      <div id = "martin-fierro" width = "300px" height = "150px"></div>
+      <canvas id = "martin-fierro" width = "300px" height = "150px"></canvas>
       <script type = "text/javascript" src = "main.js"></script>
      <!-- Notificaion del copyright -->
      <footer>© 2023 - 2024 <a href = "https://nicopauer.github.io/info/">Nicolas Pauer</a></footer>
